--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -1,53 +1,39 @@
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
+    <!--
+      Temporarily disable cerner-smart-embeddable-lib
+      <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
+    -->
+    <title>ZS-FHIR-SMART-App</title>
+  </head>
+  <body>
+    <!-- Required JS files to enable this page to embed within an MPage -->
+    <!--
+      Temporarily disable cerner-smart-embeddable-lib
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
+      <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
+    -->
 
-<head>
-    <link rel="shortcut icon" type="image/png" href="{% static 'app/favicon.ico' %}"/>
-    <title>Smart FHIR App</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
-<div class="container">
-    <div class="row" style="margin-top:30px;">
-        <div class="col-xs-4">
-            <form action="/" method="POST" class="form-inline">
-                <div class="form-group">
-                    <label style="font-size: 15px;">Enter Patient ID</label>
-                    <input type="text" class="form-control" placeholder="Search by id..." name="ID"
-                           style="margin-left:8px;width: 50%;">
-                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+    <!-- FHIR Client JS Library -->
+    <script src='./lib/js/fhir-client-v0.1.12.js'></script>
 
-                </div>
-            </form>
-        </div>
+    <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
+    <!-- https://github.com/cerner/fhir-client-cerner-additions -->
+    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+    <script>
+      FHIR.oauth2.authorize({
+        'client_id': '4990180e-0c93-4295-a0ab-906961eefbd1',
+        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+      });
+    </script>
+    <div class="spinner">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
     </div>
-</div>
-
-<table class="table table-hover">
-        <thead>
-        <tr>
-            <th>Resource Type</th>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Gender</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>Patient</td>
-            <td>123</td>
-            <td>male</td>
-            <td>Prince</td>
-        </tr>
-        </tbody>
-    </table>
-
-<!--<p>{{param}}</p>-->
-</body>
-
-
-
+  </body>
 </html>
