--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -10,7 +10,7 @@
             FHIR.oauth2.authorize({
               clientId: "4990180e-0c93-4295-a0ab-906961eefbd1",
               scope: "launch openid fhirUser patient/*.read",
-              redirectUri: "file:///C:/Users/rk28785/OneDrive%20-%20ZS/Desktop/Smart%20on%20FHIR/app/launch.html\index.html"
+              redirectUri: "https://rajakushwah.github.io/smart-on-fhir-tutorial/example-smart-app/index.html"
             });
         </script>
     </body>
