--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -19,7 +19,7 @@
         <h4>Current Patient</h4>
         <div id="patient">Loading...</div>
         <br/>
-        <h4>Medications</h4>
+        <h4>O</h4>
         <div id="meds">Loading...</div>
         <script type="text/javascript">
             FHIR.oauth2.ready().then(function(client) {
@@ -35,15 +35,15 @@
                 );
                 
                 // Get MedicationRequests for the selected patient
-                client.request("/MedicationRequest?patient=" + client.patient.id, {
-                    resolveReferences: [ "medicationReference" ],
+                client.request("/Observation?patient=" + client.patient.id, {
+                    resolveReferences: [ "valueQuantity" ],
                     graph: true
                 })
                 
                 // Reject if no MedicationRequests are found
                 .then(function(data) {
                     if (!data.entry || !data.entry.length) {
-                        throw new Error("No medications found for the selected patient");
+                        throw new Error("No observation found for the selected patient");
                     }
                     return data.entry;
                 })
