--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -9,7 +9,7 @@
         <script>
             FHIR.oauth2.authorize({
               clientId: "4990180e-0c93-4295-a0ab-906961eefbd1",
-              scope: "launch openid fhirUser patient/*.read",
+              scope: "patient/Patient.read patient/Observation.read launch online_access openid profile",
               redirectUri: "https://rajakushwah.github.io/smart-on-fhir-tutorial/example-smart-app/index.html"
             });
         </script>
