--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -16,6 +16,12 @@
         </style>
     </head>
     <body>
+		<script>
+            FHIR.oauth2.authorize({
+              clientId: "4990180e-0c93-4295-a0ab-906961eefbd1",
+              scope: "patient/Patient.read patient/Observation.read launch online_access openid profile",
+            });
+        </script>
         <h4>Current Patient</h4>
         <div id="patient">Loading...</div>
         <br/>
@@ -35,7 +41,7 @@
                 );
                 
                 // Get MedicationRequests for the selected patient
-                client.request("/Observation?patient=" + client.patient.id, {
+                client.request("/Observation?patient=" + "12724065", {
                     resolveReferences: [ "valueQuantity" ],
                     graph: true
                 })
