--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -8,7 +8,7 @@
     <body>
         <script>
             FHIR.oauth2.authorize({
-              clientId: "4990180e-0c93-4295-a0ab-906961eefbd1",
+              clientId: "973aacb-8f78-4ddd-b326-0412ddd33375",
               scope: "patient/Patient.read patient/Observation.read launch online_access openid profile",
               redirectUri: "https://rajakushwah.github.io/smart-on-fhir-tutorial/example-smart-app/index.html"
             });
