--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -19,7 +19,7 @@
         <h4>Current Patient</h4>
         <div id="patient">Loading...</div>
         <br/>
-        <h4>O</h4>
+        <h4>Observations</h4>
         <div id="meds">Loading...</div>
         <script type="text/javascript">
             FHIR.oauth2.ready().then(function(client) {
