--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Smart APP</title>
-        <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script>
-    </head>
-    <body>
-        <script>
-            FHIR.oauth2.authorize({
+<head>
+    <meta charset="UTF-8"/>
+    <title>Smart APP</title>
+    <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script>
+</head>
+<body>
+<p>wsfdwq</p>
+<script>
+        FHIR.oauth2.authorize({
               clientId: "d973aacb-8f78-4ddd-b326-0412ddd33375",
               scope: "patient/Patient.read patient/Observation.read launch online_access openid profile",
-              redirectUri: "https://rajakushwah.github.io/smart-on-fhir-tutorial/example-smart-app/index.html"
+              redirectUri: "https://rajakushwah.github.io/smart-on-fhir-tutorial/example-smart-app/index.html",
+              patientId:"12724065",
+              fhirServiceUrl:"https://fhir-ehr-code.cerner.com/dstu2/ec2458f2-1e24-41c8-b71b-0e701af7583d/Patient",
+              launch:"a7b726f7-ea3c-4ad7-bef4-4eab4b3b0857",
+              response_type:"code",
+              authorization_url:"https://authorization.cerner.com/tenants/ec2458f2-1e24-41c8-b71b-0e701af7583d/protocols/oauth2/profiles/smart-v1/personas/provider/authorize"
             });
-        </script>
-    </body>
+</script>
+</body>
 </html>
+
+
