--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -13,10 +13,9 @@
               scope: "patient/Patient.read patient/Observation.read launch online_access openid profile",
               redirectUri: "https://rajakushwah.github.io/smart-on-fhir-tutorial/example-smart-app/index.html",
               patientId:"12724065",
-              fhirServiceUrl:"https://fhir-ehr-code.cerner.com/dstu2/ec2458f2-1e24-41c8-b71b-0e701af7583d/Patient",
+              fhirServiceUrl:"https://fhir-ehr-code.cerner.com/dstu2/ec2458f2-1e24-41c8-b71b-0e701af7583d",
               launch:"a7b726f7-ea3c-4ad7-bef4-4eab4b3b0857",
-              response_type:"code",
-              authorization_url:"https://authorization.cerner.com/tenants/ec2458f2-1e24-41c8-b71b-0e701af7583d/protocols/oauth2/profiles/smart-v1/personas/provider/authorize"
+              response_type:"code"
             });
 </script>
 </body>
