--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -11,7 +11,7 @@
         FHIR.oauth2.authorize({
               clientId: "d973aacb-8f78-4ddd-b326-0412ddd33375",
               scope: "patient/Patient.read patient/Observation.read launch online_access openid profile",
-              iss:"https://fhir-open.cerner.com/dstu2/ec2458f2-1e24-41c8-b71b-0e701af7583d",
+              iss:"https://fhir-ehr-code.com/dstu2/ec2458f2-1e24-41c8-b71b-0e701af7583d",
               patientId:"12724065",
               redirectUri: "https://rajakushwah.github.io/smart-on-fhir-tutorial/example-smart-app/index.html",
               launch:"a7b726f7-ea3c-4ad7-bef4-4eab4b3b0857",
