--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script>
 </head>
 <body>
-<p>wsfdwq</p>
+<p>Authorizing.....</p>
 <script>
         FHIR.oauth2.authorize({
               clientId: "d973aacb-8f78-4ddd-b326-0412ddd33375",
